dhall/tests/type-inference/failure/unit/MergeEmptyWithoutAnnotation.txt
Type error: error: Merge2ArgMustBeUnionOrOptional
 --> <current file>:1:1
  |
1 | merge {=} <>
  | ^^^^^^^^^^^^ Merge2ArgMustBeUnionOrOptional
  |
